--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -2,5 +2,5 @@ server=port = 8086;
 
 spring.datasource.url=jdbc:mysql://localhost:3306/crudusers
 spring.datasource.username=root
-spring.datasource.password=Sapporo7319!&()
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
